workspace/query_plan/src/snapshots/query_plan__model__test__test.snap
---
source: workspace/query_plan/src/model.rs
expression: actual
---
Parallel(
    [
        Fetch {
            service: Graph(
                "WIP",
            ),
            query: QueryOperation {
                selection_set: SelectionSet(
                    [
                        Field {
                            name: "topProducts",
                            selections: SelectionSet(
                                [
                                    Field {
                                        name: "name",
                                        selections: SelectionSet(
                                            [],
                                        ),
                                        arguments: [],
                                        directives: [],
                                        is_hidden: false,
                                        graph: [],
                                        join_field: [],
                                    },
                                    Field {
                                        name: "reviews",
                                        selections: SelectionSet(
                                            [
                                                Field {
                                                    name: "score",
                                                    selections: SelectionSet(
                                                        [],
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    is_hidden: false,
                                                    graph: [],
                                                    join_field: [],
                                                },
                                            ],
                                        ),
                                        arguments: [],
                                        directives: [],
                                        is_hidden: false,
                                        graph: [],
                                        join_field: [],
                                    },
                                    Field {
                                        name: "reviews",
                                        selections: SelectionSet(
                                            [
                                                Field {
                                                    name: "description",
                                                    selections: SelectionSet(
                                                        [],
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    is_hidden: false,
                                                    graph: [],
                                                    join_field: [],
                                                },
                                            ],
                                        ),
                                        arguments: [],
                                        directives: [],
                                        is_hidden: false,
                                        graph: [],
                                        join_field: [],
                                    },
                                ],
                            ),
                            arguments: [],
                            directives: [],
                            is_hidden: false,
                            graph: [],
                            join_field: [],
                        },
                    ],
                ),
            },
            representations: None,
            type_name: TypeName(
                "Query",
            ),
        },
    ],
)
